--- a/package.json
+++ b/package.json
@@ -53,28 +53,34 @@
     "mobx": "^4.8.0",
     "mobx-react": "^6.1.4",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
+    "@babel/plugin-proposal-decorators": "^7.24.1",
+    "@babel/plugin-transform-class-properties": "^7.24.1",
+    "@dcasia/mini-program-tailwind-webpack-plugin": "^1.5.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "@tarojs/cli": "3.6.28",
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^18.0.0",
-    "postcss": "^8.4.18",
-    "webpack": "^5.78.0",
     "@tarojs/taro-loader": "3.6.28",
     "@tarojs/webpack5-runner": "3.6.28",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "react-refresh": "^0.11.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.0",
+    "@types/webpack-env": "^1.13.6",
     "babel-preset-taro": "3.6.28",
-    "eslint-config-taro": "3.6.28",
     "eslint": "^8.12.0",
-    "eslint-plugin-react": "^7.8.2",
+    "eslint-config-taro": "3.6.28",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "postcss": "^8.4.18",
+    "postcss-preset-env": "^9.5.13",
+    "react-refresh": "^0.11.0",
     "stylelint": "9.3.0",
-    "typescript": "^4.1.0",
+    "taro-plugin-tailwind": "^1.3.4",
     "ts-node": "^10.9.1",
-    "@types/node": "^18.15.11"
+    "typescript": "^4.1.0",
+    "webpack": "^5.78.0"
   }
 }
