--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tarojs/components": "3.6.28",
     "@tarojs/helper": "3.6.28",
     "@tarojs/plugin-framework-react": "3.6.28",
+    "@tarojs/plugin-http": "^3.6.30",
     "@tarojs/plugin-platform-alipay": "3.6.28",
     "@tarojs/plugin-platform-h5": "3.6.28",
     "@tarojs/plugin-platform-jd": "3.6.28",
@@ -50,6 +51,7 @@
     "@tarojs/runtime": "3.6.28",
     "@tarojs/shared": "3.6.28",
     "@tarojs/taro": "3.6.28",
+    "axios": "^1.7.2",
     "mobx": "^4.8.0",
     "mobx-react": "^6.1.4",
     "react": "^18.0.0",
